Add solutions for the c# and py files. (c# doesn't run unless you are using a solution)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 #visual studio crap
 .vs/
+bin/
+obj/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.py[cod] 
 *$py.class
 
 # C extensions
